수정-main_수정-index

--- a/products/templates/products/detail.html
+++ b/products/templates/products/detail.html
@@ -108,7 +108,7 @@
         </div>
       </form>
     </div>
-    
+  
     {% for comment in comments %}
     <div class='container mt-3'>
       <div class='row mb-3'>
@@ -202,5 +202,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js" integrity="sha512-bPs7Ae6pVvhOSiIcyUClR7/q2OAsRiovw4vAkX+zJbw3ShAeeqezq50RIIcIURq7Oa20rW2n2q+fyXBNcU9lrw==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <script src="{% static 'js/products_index.js' %}"></script>
     <script src="{% static 'js/products_index.js' %}"></script>
+    <script>
+    </script>
   {% endblock script %}
 
