--- a/templates/footer.html
+++ b/templates/footer.html
@@ -4,7 +4,7 @@
 <div class="row">
   <div class="col-9">
     <div class="footer__image-container">
-      <img class="footer__image" src="{% static 'image/logo.png' %}" alt="">
+      <img class="footer__image" src="{% static 'image/logo_t.png' %}" alt="">
     </div>
     <p>편의점 맛돌이</p>
   </div>
