--- a/static/css/base.css
+++ b/static/css/base.css
@@ -83,7 +83,7 @@ footer {
   padding-bottom: 10px;
 }
 
-@media (max-width: 990px) {
+@media (max-width: 768px) {
   .search_hidden {
     display: none;
   }
@@ -144,4 +144,18 @@ footer {
   src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_11-01@1.0/NanumSquareNeo-Variable.woff2') format('woff2');
   font-weight: normal;
   font-style: normal;
+}
+
+body::-webkit-scrollbar {
+  width: 8px; 
+}
+
+body::-webkit-scrollbar-thumb {
+  height: 30%; 
+  background: var(--main-color);
+  border-radius: 10px;
+}
+
+body::-webkit-scrollbar-track {
+  background:   var(--subtle-color);
 }
