--- a/templates/rescue/index.html
+++ b/templates/rescue/index.html
@@ -94,18 +94,18 @@
   <div class='back--wrap'>
     <img src="{% static 'image/background.webp' %}" class='back--img' alt="배경">
     <div class='button--content'>
-      <img src="{% static 'image/logo2.png' %}" alt="logo" class='tdlogo logo' onclick='logo()'>      
+      <img src="{% static 'image/logo_t.png' %}" alt="logo" class='tdlogo logo' onclick='logo()'>      
       <div class=''>
       </div> 
+      <a href="{% url 'recipes:index' %}" class="link tdrecipe">
+        <img src="{% static 'image/logo_1.png' %}" class="link--icon" alt="">
+        <p class="mt-3">맛있는 한끼를 위해</p>
+        <h2 class="mt-2">레시피 보러가기</h2>
+      </a>
         <a href="{% url 'products:index' %}" class="link tdproducts">
-          <img src="{% static 'image/product.svg' %}" class="link--icon" alt="">
+          <img src="{% static 'image/logo_2.png' %}" class="link--icon" alt="">
           <p class="mt-3">다양한 제품을 한눈에</p>
           <h2 class="mt-2">제품 보러가기</h2>
-        </a>
-        <a href="{% url 'recipes:index' %}" class="link tdrecipe">
-          <img src="{% static 'image/recipe.svg' %}" class="link--icon" alt="">
-          <p class="mt-3">맛있는 한끼를 위해</p>
-          <h2 class="mt-2">레시피 보러가기</h2>
         </a>
       </div>
   </div>
