--- a/recipes/templates/recipes/detail_delete_modal.html
+++ b/recipes/templates/recipes/detail_delete_modal.html
@@ -1,5 +1,5 @@
 <!-- Modal -->
-<div class="modal fade" id="recipeDeleteModal" tabindex="-1" aria-labelledby="recipeDeleteModalLabel" aria-hidden="true">
+<div style="z-index: 1100;" class="modal fade" id="recipeDeleteModal" tabindex="-1" aria-labelledby="recipeDeleteModalLabel" aria-hidden="true">
   <div class="modal-dialog">
     <div class="modal-content">
       <div class="modal-header">
@@ -19,3 +19,4 @@
     </div>
   </div>
 </div>
+
