추가-recipe_review쪽 마진

--- a/recipes/templates/recipes/detail.html
+++ b/recipes/templates/recipes/detail.html
@@ -259,7 +259,7 @@
                       {% endif %}
                       {{ field }}
                     {% endfor %}
-                    <div>
+                    <div class="mt-2">
                       <label for="id_image">이미지</label>
                       <input type="file" name="image" id="id_image">
                     </div>
